--- a/21-figure1.Rmd
+++ b/21-figure1.Rmd
@@ -33,6 +33,7 @@ indvs <- unique(tcr_raw$indv_label)
 clones_per_pt_no_graft <- lapply(setNames(indvs, indvs), function(x) {
     tcr_raw %>% filter(indv_label == x) %>% 
     filter(tissue != "graft_blood") %>% 
+    filter(tissue == "Tcells") %>% 
       filter(productive_frequency > 0) %>%
       pull(rearrangement) %>% unique()
   }) %>% 
@@ -56,7 +57,6 @@ clones_per_pt_yes_graft <- lapply(setNames(indvs, indvs), function(x) {
 
 data.frame(nclones=clones_per_pt_yes_graft) %>% 
   rownames_to_column("indv_label")  %>% left_join(tcr_sample_metadata %>% select(indv_label, org)%>%distinct()) %>% 
-  filter(!grepl("Donor", indv_label)) %>% 
   group_by(org) %>% summarize(
     mean_clones_per_patient=mean(nclones),
     median_clones_per_patient=median(nclones),
