--- a/23-figure3-S4-S5.Rmd
+++ b/23-figure3-S4-S5.Rmd
@@ -193,7 +193,6 @@ for (i in seq_along(mouse_plots_to_make)){
 figures_path_s5 <- file.path("figures", "S5")
 dir.create(figures_path_s5, showWarnings = FALSE)
 
-# remake to exlude graft in the top
 
 
 tissues_to_completely_exclude = c("heart", "kidney", "Heart", "Kidney")
@@ -209,21 +208,24 @@ for (pat in tcr_sample_metadata %>% filter(org == "Human") %>% pull(indv_label) 
     thisdata$top_n_data  <- thisdata$top_n_data %>% filter(tissue != "graft_blood") 
   }
 
-  #n_distinct(thisdata$top_n_data$rearrangement)
-  
-  #top_n_data %>% select(sample_name, productive_frequency, orig_tissue_clone_rank)
-  
-  
-  
+
   hmap_data_pre  <- thisdata$top_n_data %>% left_join(tissue_annotations) %>% arrange(anatomic_order)  %>% 
     select(rearrangement, amino_acid, rearrangement_trunc, v_gene, j_gene,  tissue, tissue_label, orig_tissue_clone_rank) %>% 
     select(-tissue) %>% 
     pivot_wider(names_from = tissue_label, values_from = orig_tissue_clone_rank) 
+  
+  # we have the ranks, but we need the template count in order to label cells
+  hmap_data_labels  <- thisdata$top_n_data %>% left_join(tissue_annotations) %>% arrange(anatomic_order)  %>% 
+    select(rearrangement, amino_acid, rearrangement_trunc, v_gene, j_gene,  tissue, tissue_label, templates) %>% 
+    select(-tissue) %>% 
+    pivot_wider(names_from = tissue_label, values_from = templates) %>% select(-v_gene, -j_gene, -rearrangement_trunc)
   hmap_data <- hmap_data_pre %>% select(-v_gene, -j_gene, -rearrangement_trunc)
+  
   # add pseudoranks for absent clones
   tmphmap_data_for_ordering <- hmap_data[,!colnames(hmap_data) %in% cols_to_exclude_from_ranking]
   tmphmap_data_for_ordering <- hmap_data %>% select(-rearrangement, -amino_acid)
   
+  # give a pseudorank as 1.5x the max rank considered
   pseudorank = round(max(na.rm = TRUE, tmphmap_data_for_ordering) * 1.5)
   tmphmap_data_for_ordering[is.na(tmphmap_data_for_ordering)] <- pseudorank
   
@@ -244,6 +246,16 @@ for (pat in tcr_sample_metadata %>% filter(org == "Human") %>% pull(indv_label) 
   rownames(mat) <- gsub("^(.{10}).*", "\\1", ordered_hmap_data$rearrangement)
   rownames(mat) <- ordered_hmap_data$amino_acid
   
+  # clean up the label matrix with the actual template counts
+  hmap_data_labels_clean <- hmap_data_labels[
+    match(ordered_hmap_data$rearrangement, hmap_data_labels$rearrangement) ,
+    colnames(ordered_hmap_data)] %>% select(-amino_acid)%>% select(-rearrangement) %>% as.matrix()
+  # this converts to 
+  hmap_data_labels_clean[is.na(hmap_data_labels_clean)] <- ""
+  # the use of ordered_hmap_data here is intentional; we already matched up the rearrangement order above
+  rownames(hmap_data_labels_clean) <- gsub("^(.{10}).*", "\\1", ordered_hmap_data$rearrangement)
+   
+  
   tmp <- data.frame(tissue=unique(thisdata$top_n_data$tissue)) %>% left_join(tissue_annotations) %>% mutate(rn=tissue_label) %>% column_to_rownames("rn")
   mat_colors=list(tissue_label=tmp %>% pull(S5_colors))
   names(mat_colors$tissue_label) <- rownames(tmp)
@@ -261,39 +273,18 @@ for (pat in tcr_sample_metadata %>% filter(org == "Human") %>% pull(indv_label) 
     annotation_col    = tmp %>% select(tissue_label),
     annotation_colors = mat_colors,
     breaks            = seq(1,55,1),
-    # annotation_row    = clone_group,
-    # annotation_clors  = row_color,
+    display_numbers = hmap_data_labels_clean,
+    number_color = "white",
     drop_levels       = TRUE,
     fontsize_row = 4,
     angle_col = 315, 
-      
     cluster_rows = F,
     cluster_cols = F,
     fontsize          = 8,
-    # main              = paste(paste(pt_ind, num, sep = "_"), "heatmap", sep = "_")
   )
   dev.off()
-  # pdf(file=file.path(figures_path_s5, paste0(pat, "_clean.pdf")))
-  # pheatmap::pheatmap(
-  #   mat               = mat ,
-  #   color             = topo.colors(50),
-  #   border_color      = "black",
-  #   show_colnames     = FALSE,
-  #   show_rownames     = FALSE,
-  #   annotation_col    = tmp %>% select(tissue),
-  #   annotation_colors = mat_colors,
-  #   breaks            = seq(1,50,1),
-  #   # annotation_row    = clone_group,
-  #   # annotation_clors  = row_color,
-  #   drop_levels       = TRUE,
-  #   cluster_rows = F,
-  #   cluster_cols = F,
-  #   fontsize          = 10,
-  #   # main              = paste(paste(pt_ind, num, sep = "_"), "heatmap", sep = "_")
-  # )
-  # dev.off()
   supp_data_file_list[[pat]]  <- hmap_data_pre %>% select(-rearrangement) %>% select(2,1,3,4) %>% mutate(patient=pat)
-  }
+}
 write.csv(bind_rows(supp_data_file_list), file = "tables/stX-topclone-IDs.csv")
 ```
   
