--- a/30-figureS2.Rmd
+++ b/30-figureS2.Rmd
@@ -37,13 +37,13 @@ GI = s2diversity %>%
   filter(!tissue_label %in% c("PBSCs", "Bone Marrow", "pre-tx PBMCs", "Heart", "Kidney", "mLN")) %>%
   filter(tissue != "Graft/Blood") %>% 
   filter(org=="Human") %>% 
-  filter("" != S2_group)
+  filter("" != S2_groups)
 GI_GVHD = GI %>%
    filter(CMV.reactivation != "n/a")
 
 
 #these are the plots for clonality
-basep <- ggplot(GI, aes(x=reorder(S2_group, anatomic_order)))
+basep <- ggplot(GI, aes(x=reorder(S2_groups, anatomic_order)))
 
 #this plot colors by allograft source
 clonality_graft = basep  +
@@ -63,7 +63,7 @@ S2_A = clonality_graft + slope_graft + plot_layout(guides = "collect")
 
 
 #this plot colors by CMV
-cc <- ggplot(GI_GVHD, aes(x=reorder(S2_group, anatomic_order)))
+cc <- ggplot(GI_GVHD, aes(x=reorder(S2_groups, anatomic_order)))
 
 clonality_CMV = cc + 
   geom_point(aes(y=clonality, fill = CMV.reactivation),size = 4,  stroke = 2, alpha = .8, position = jitter2, shape=21) +
@@ -79,15 +79,12 @@ S2_B = clonality_CMV + slope_CMV + plot_layout(guides = "collect")
 
 #this plot colors by grade of GVHD peri-autopsy (acute GVHD
 clonality_GVHD = cc + 
-  geom_point(aes(y=clonality, fill = GVHD_severity), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) +
- s2_theme +
-  xlab("") + scale_fill_brewer(palette = "Set2")
+  geom_point(aes(y=clonality, fill = as.factor(GVHD_severity)), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) + s2_theme + labs(fill="GVHD \nseverity") + xlab("") + scale_fill_brewer(palette = "Set2")
 
 #this plot colors by grade of GVHD peri-autopsy (acute GVHD)
 slope_GVHD = cc + 
-  geom_point(aes(y=slope, fill = GVHD_severity), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) +
-  s2_theme +
-  xlab("") + scale_fill_brewer(palette = "Set2")
+  geom_point(aes(y=slope, fill = as.factor(GVHD_severity)), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) +
+  s2_theme + scale_fill_brewer(palette = "Set2") + xlab("") + labs(fill="GVHD \nseverity")
 
 S2_C = clonality_GVHD + slope_GVHD + plot_layout(guides = "collect")
 
